--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
                         </configuration>
                     </execution>
                 </executions>
