--- a/japicmp-testbase/pom.xml
+++ b/japicmp-testbase/pom.xml
@@ -16,15 +16,15 @@
 		<module>japicmp-test</module>
 		<module>japicmp-test-maven-plugin</module>
 		<module>japicmp-test-maven-plugin-guava</module>
-		<module>japicmp-test-maven-plugin-japicmp</module>
+		<!--<module>japicmp-test-maven-plugin-japicmp</module>-->
 		<module>japicmp-test-service-impl-base</module>
 		<module>japicmp-test-maven-plugin-classifier</module>
 		<module>japicmp-test2-v1</module>
 		<module>japicmp-test2-v2</module>
 		<module>japicmp-test-maven-plugin-pom-module</module>
 		<module>japicmp-test-vx-client</module>
-		<module>japicmp-test-maven-plugin-ignoremissingartifact</module>
-		<module>japicmp-test-maven-plugin-packaging</module>
+		<!--<module>japicmp-test-maven-plugin-ignoremissingartifact</module>-->
+		<!--<module>japicmp-test-maven-plugin-packaging</module>-->
 	</modules>
 
 	<properties>
