--- a/japicmp/pom.xml
+++ b/japicmp/pom.xml
@@ -27,7 +27,9 @@
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.20.0-GA</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/javassist.jar</systemPath>
+			<version>3.20.0-GA-java9</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -47,9 +49,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.17</version>
-				<configuration>
-					<argLine>-XX:-UseSplitVerifier</argLine>
-				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
