--- a/japicmp-testbase/japicmp-test-maven-plugin-classifier/pom.xml
+++ b/japicmp-testbase/japicmp-test-maven-plugin-classifier/pom.xml
@@ -52,6 +52,16 @@
 							<artifactId>commons-math3</artifactId>
 							<version>3.4</version>
 						</dependency>
+						<dependency>
+							<groupId>com.github.siom79.japicmp</groupId>
+							<artifactId>japicmp-test-provided-dependency</artifactId>
+							<version>${project.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>com.github.siom79.japicmp</groupId>
+							<artifactId>japicmp-test-optional-dependency</artifactId>
+							<version>${project.version}</version>
+						</dependency>
 					</dependencies>
 				</configuration>
 				<executions>
