--- a/japicmp-testbase/japicmp-test-maven-plugin-post-analysis-script-artifact-test/pom.xml
+++ b/japicmp-testbase/japicmp-test-maven-plugin-post-analysis-script-artifact-test/pom.xml
@@ -49,6 +49,16 @@
 						<artifactId>japicmp-test-maven-plugin-post-analysis-script-artifact</artifactId>
 						<version>${project.version}</version>
 					</dependency>
+					<dependency>
+						<groupId>com.github.siom79.japicmp</groupId>
+						<artifactId>japicmp-test-provided-dependency</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.github.siom79.japicmp</groupId>
+						<artifactId>japicmp-test-optional-dependency</artifactId>
+						<version>${project.version}</version>
+					</dependency>
 				</dependencies>
 				<executions>
 					<execution>
