--- a/japicmp-testbase/japicmp-test-service-impl-base/japicmp-test-service-impl-v2/pom.xml
+++ b/japicmp-testbase/japicmp-test-service-impl-base/japicmp-test-service-impl-v2/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>japicmp-test-service-impl-base</artifactId>
-		<groupId>com.github.siom79.japicmp</groupId>
-		<version>0.17.1</version>
+		<groupId>io.github.zentol.japicmp</groupId>
+		<version>0.17.1.1_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,7 +11,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp-test-service-v2</artifactId>
 			<version>${project.version}</version>
 		</dependency>
