--- a/japicmp-testbase/japicmp-test-vx-client/pom.xml
+++ b/japicmp-testbase/japicmp-test-vx-client/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>japicmp-testbase</artifactId>
-		<groupId>com.github.siom79.japicmp</groupId>
-		<version>0.17.1</version>
+		<groupId>io.github.zentol.japicmp</groupId>
+		<version>0.17.1.1_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,12 +15,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>${japicmp-test-vx.artifactId}</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp-test-v2</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
@@ -54,7 +54,7 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
@@ -62,7 +62,7 @@
 									<destFileName>japicmp-test-v1.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
