Updated metadata and README

--- a/japicmp-testbase/japicmp-test-service-impl-base/pom.xml
+++ b/japicmp-testbase/japicmp-test-service-impl-base/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>japicmp-testbase</artifactId>
-		<groupId>com.github.siom79.japicmp</groupId>
-		<version>0.17.1</version>
+		<groupId>io.github.zentol.japicmp</groupId>
+		<version>0.17.1_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
