--- a/japicmp-maven-plugin/pom.xml
+++ b/japicmp-maven-plugin/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.github.siom79.japicmp</groupId>
+		<groupId>io.github.zentol.japicmp</groupId>
 		<artifactId>japicmp-base</artifactId>
-		<version>0.17.1</version>
+		<version>0.17.1_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
 	<description>japicmp-maven-plugin is a maven plugin that computes the differences between two
 		versions of a jar file/artifact in order to ease the API documentation for clients/customers.
 	</description>
-	<url>https://github.com/siom79/japicmp</url>
+	<url>https://github.com/zentol/japicmp</url>
 
 	<licenses>
 		<license>
@@ -89,7 +89,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp</artifactId>
 			<version>${project.version}</version>
 		</dependency>
