--- a/japicmp-testbase/japicmp-test-service-impl-base/japicmp-test-service-test/pom.xml
+++ b/japicmp-testbase/japicmp-test-service-impl-base/japicmp-test-service-test/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>japicmp-test-service-impl-base</artifactId>
-		<groupId>com.github.siom79.japicmp</groupId>
-		<version>0.17.1</version>
+		<groupId>io.github.zentol.japicmp</groupId>
+		<version>0.17.1_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,12 +11,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp-test-service-impl-v1</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
@@ -37,7 +37,7 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-service-impl-v1</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
@@ -45,7 +45,7 @@
 									<destFileName>japicmp-test-service-impl-v1.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-service-impl-v2</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
@@ -53,7 +53,7 @@
 									<destFileName>japicmp-test-service-impl-v2.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-service-v1</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
@@ -61,7 +61,7 @@
 									<destFileName>japicmp-test-service-v1.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-service-v2</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
@@ -74,34 +74,34 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>com.github.siom79.japicmp</groupId>
+				<groupId>io.github.zentol.japicmp</groupId>
 				<artifactId>japicmp-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<configuration>
 					<oldVersion>
 						<dependency>
-							<groupId>com.github.siom79.japicmp</groupId>
+							<groupId>io.github.zentol.japicmp</groupId>
 							<artifactId>japicmp-test-service-impl-v1</artifactId>
 							<version>${project.version}</version>
 						</dependency>
 					</oldVersion>
 					<newVersion>
 						<dependency>
-							<groupId>com.github.siom79.japicmp</groupId>
+							<groupId>io.github.zentol.japicmp</groupId>
 							<artifactId>japicmp-test-service-impl-v2</artifactId>
 							<version>${project.version}</version>
 						</dependency>
 					</newVersion>
 					<oldClassPathDependencies>
 						<dependency>
-							<groupId>com.github.siom79.japicmp</groupId>
+							<groupId>io.github.zentol.japicmp</groupId>
 							<artifactId>japicmp-test-service-v1</artifactId>
 							<version>${project.version}</version>
 						</dependency>
 					</oldClassPathDependencies>
 					<newClassPathDependencies>
 						<dependency>
-							<groupId>com.github.siom79.japicmp</groupId>
+							<groupId>io.github.zentol.japicmp</groupId>
 							<artifactId>japicmp-test-service-v2</artifactId>
 							<version>${project.version}</version>
 						</dependency>
