--- a/japicmp-testbase/japicmp-test-maven-plugin-ignoremissingartifact/pom.xml
+++ b/japicmp-testbase/japicmp-test-maven-plugin-ignoremissingartifact/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>japicmp-testbase</artifactId>
-		<groupId>com.github.siom79.japicmp</groupId>
-		<version>0.16.1-SNAPSHOT</version>
+		<groupId>io.github.zentol.japicmp</groupId>
+		<version>0.16.0_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -12,20 +12,20 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.github.siom79.japicmp</groupId>
+				<groupId>io.github.zentol.japicmp</groupId>
 				<artifactId>japicmp-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<configuration>
 					<oldVersion>
 						<dependency>
-							<groupId>com.github.siom79.japicmp</groupId>
+							<groupId>io.github.zentol.japicmp</groupId>
 							<artifactId>not-existing-artifact</artifactId>
 							<version>${project.version}</version>
 						</dependency>
 					</oldVersion>
 					<newVersion>
 						<dependency>
-							<groupId>com.github.siom79.japicmp</groupId>
+							<groupId>io.github.zentol.japicmp</groupId>
 							<artifactId>japicmp-test-v2</artifactId>
 							<version>${project.version}</version>
 						</dependency>
