--- a/japicmp-testbase/japicmp-test-maven-plugin/pom.xml
+++ b/japicmp-testbase/japicmp-test-maven-plugin/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.github.siom79.japicmp</groupId>
+		<groupId>io.github.zentol.japicmp</groupId>
 		<artifactId>japicmp-testbase</artifactId>
-		<version>0.16.1-SNAPSHOT</version>
+		<version>0.16.0_m325</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -28,12 +28,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp-maven-plugin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.siom79.japicmp</groupId>
+			<groupId>io.github.zentol.japicmp</groupId>
 			<artifactId>japicmp-test-v2</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
@@ -56,7 +56,7 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 									<overWrite>true</overWrite>
@@ -77,7 +77,7 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>com.github.siom79.japicmp</groupId>
+				<groupId>io.github.zentol.japicmp</groupId>
 				<artifactId>japicmp-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<executions>
@@ -90,14 +90,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -131,24 +131,24 @@
 						<configuration>
 							<oldVersions>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test2-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersions>
 							<newVersions>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test2-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -178,14 +178,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -213,14 +213,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-non-existing-artifact</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -247,14 +247,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -278,14 +278,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -306,14 +306,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -361,14 +361,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -678,7 +678,7 @@
 	<reporting>
 		<plugins>
 			<plugin>
-				<groupId>com.github.siom79.japicmp</groupId>
+				<groupId>io.github.zentol.japicmp</groupId>
 				<artifactId>japicmp-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<configuration>
@@ -698,7 +698,7 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v1</artifactId>
 									<version>${project.version}</version>
 								</dependency>
@@ -721,14 +721,14 @@
 						<configuration>
 							<oldVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
 							</oldVersion>
 							<newVersion>
 								<dependency>
-									<groupId>com.github.siom79.japicmp</groupId>
+									<groupId>io.github.zentol.japicmp</groupId>
 									<artifactId>japicmp-test-v2</artifactId>
 									<version>${project.version}</version>
 								</dependency>
