--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.siom79.japicmp</groupId>
+    <groupId>io.github.zentol.japicmp</groupId>
     <artifactId>japicmp-base</artifactId>
-    <version>0.16.1-SNAPSHOT</version>
+    <version>0.16.0_m325</version>
     <packaging>pom</packaging>
 
     <name>japicmp-base</name>
     <description>japicmp is a tool/maven plugin that compares two versions of a jar archive for binary compatibility.</description>
-    <url>https://github.com/siom79/japicmp</url>
+    <url>https://github.com/zentol/japicmp</url>
 
     <licenses>
         <license>
@@ -135,7 +135,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <github.account>siom79</github.account>
+        <github.account>zentol</github.account>
         <github.project>japicmp</github.project>
 		<maven.site.skip>false</maven.site.skip>
 		<surefireVersion>3.0.0-M7</surefireVersion>
@@ -143,7 +143,6 @@
 		<guava.version>30.1-jre</guava.version>
 		<jaxb.version>2.2.7</jaxb.version>
 		<javax-activation.version>1.1</javax-activation.version>
-		<sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots</sonatypeOssDistMgmtSnapshotsUrl>
     </properties>
 
     <modules>
@@ -341,7 +340,7 @@
 		<connection>scm:git:https://github.com/${github.account}/${github.project}.git</connection>
 		<developerConnection>scm:git:https://github.com/${github.account}/${github.project}.git</developerConnection>
 		<url>https://github.com/${github.account}/${github.project}.git</url>
-		<tag>japicmp-base-0.15.7</tag>
+		<tag>japicmp-base-0.16.0_m325</tag>
 	</scm>
 
 	<distributionManagement>
@@ -352,12 +351,12 @@
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>Sonatype Nexus Snapshots</name>
-			<url>${sonatypeOssDistMgmtSnapshotsUrl}</url>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
 			<name>Central Repository OSSRH</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
 
